samples/errors/field_access_on_non_record.opal
;; Error: `:x` is a field accessor for Point, not applicable to an Int
(type Point (
  (:x ~ Int)
  (:y ~ Int)))

(let main {}
  (:x 99))
